Various improvements, still in progress